# Visualisation-of-the-outputs-of-k-Wave-ultrasound-simulations

./: .clang-format  .gitignore  Changelog.md  License.md  PDD-1bod.odp  PDD-2bod.pptx  README.md  Readme.md  docs.html  format_all.cmd  hdf5-c-parallel_paths.pri  hdf5-parallel_paths.pri  hdf5.pri  hdf5_paths.pri  hdf5_paths_default.pri  hdf5file-c++_paths.pri  hdf5file-parallel_paths.pri  hdf5file_paths.pri  notes.txt  opencv_paths.pri  opencv_paths_default.pri  openmp.pri  prezentace.odp  projects.pro  readme_cs.txt  test.ods  test.txt  test2.ods  test2.xlsx
hdf5/hdf5/: CMakeLists.txt  hdf5.pro  hdf5file.cpp  hdf5file.h  main.cpp
hdf5/hdf5/hdf5file/: CMakeLists.txt  hdf5file.cpp  hdf5file.h
k-wave-h5-processing/: CMakeLists.txt  Makefile  dtsforpcs.cpp  dtsforpcs.h  filescontext.cpp  filescontext.h  helper.cpp  helper.h  k-wave-h5-processing.cpp  k-wave-h5-processing.pro  main.cpp  paramsdefinition.cpp  paramsdefinition.h  settings.cpp  settings.h
k-wave-h5-processing/k-wave-h5-processing/: k-wave-h5-processing.pro
k-wave-h5-processing/k-wave-h5-processing/hdf5file/: HDF5Attribute.cpp  HDF5Attribute.h  HDF5Dataset.cpp  HDF5Dataset.h  HDF5File1.h  HDF5Group.cpp  HDF5Group.h  HDF5Object.cpp  HDF5Object.h  hdf5file.cpp  hdf5file.h  hdf5file.pri  hdf5file.pro
k-wave-h5-processing/k-wave-h5-processing/main/: main.cpp  main.pro
k-wave-h5-processing/processing/: changechunks.cpp  changechunks.h  compress.cpp  compress.h  decompress.cpp  decompress.h  difference.cpp  difference.h  downsampling.cpp  downsampling.h  processing.cpp  processing.h  reshape.cpp  reshape.h
projects/: CMakeLists.txt  Doxyfile  README.md  hdf5.pri  hdf5_paths_default.pri  projects.pro
projects/docs/: doxygen_log.txt
projects/docs/html/: _r_e_a_d_m_e_8md_source.html  abstractwidget_8cpp.html  abstractwidget_8cpp_source.html  abstractwidget_8h.html  abstractwidget_8h_source.html  annotated.html  attribute_8cpp.html  attribute_8cpp_source.html  attribute_8h.html  attribute_8h_source.html  changechunks_8cpp.html  changechunks_8cpp_source.html  changechunks_8h.html  changechunks_8h_source.html  class_abstract_widget-members.html  class_abstract_widget.html  class_change_chunks-members.html  class_change_chunks.html  class_color_map-members.html  class_color_map.html  class_compress-members.html  class_compress.html  class_dataset_info_group_box-members.html  class_dataset_info_group_box.html  class_datasets_dock_widget-members.html  class_datasets_dock_widget.html  class_decompress-members.html  class_decompress.html  class_difference-members.html  class_difference.html  class_downsampling-members.html  class_downsampling.html  class_dts_for_pcs-members.html  class_dts_for_pcs.html  class_file_info_dock_widget-members.html  class_file_info_dock_widget.html  class_files_context-members.html  class_files_context.html  class_g_window-members.html  class_g_window.html  (+373 more)
projects/h5-rename/: CMakeLists.txt  h5-rename.pro  main.cpp  settings.cpp  settings.h
projects/hdf5helper/: CMakeLists.txt  HDF5Attribute.cpp  HDF5Attribute.h  HDF5Dataset.cpp  HDF5Dataset.h  HDF5File.cpp  HDF5File.h  HDF5Group.cpp  HDF5Group.h  HDF5Object.cpp  HDF5Vector.cpp  HDF5Vector.h  HDF5Vector3D.cpp  HDF5Vector3D.h  HDF5Vector4D.cpp  HDF5Vector4D.h  attribute.cpp  attribute.h  dataset.cpp  dataset.h  file.cpp  file.h  group.cpp  group.h  hdf5helper.h  hdf5helper.pri  hdf5helper.pro  object.cpp  object.h  vector.cpp  vector.h  vector3d.cpp  vector3d.h  vector4d.cpp  vector4d.h
projects/hdf5helper-parallel/: hdf5helper-parallel.pro
projects/k-wave-h5-helper/: CMakeLists.txt  attribute.cpp  attribute.h  compresshelper.cpp  compresshelper.h  dataset.cpp  dataset.h  file.cpp  file.h  group.cpp  group.h  k-wave-h5-helper.h  k-wave-h5-helper.pri  k-wave-h5-helper.pro  object.cpp  object.h  vector.cpp  vector.h  vector3d.cpp  vector3d.h  vector4d.cpp  vector4d.h
projects/k-wave-h5-helper-parallel/: k-wave-h5-helper-parallel.h
projects/k-wave-h5-processing/: CMakeLists.txt  changechunks.cpp  changechunks.h  compress.cpp  compress.h  compresshelper.cpp  compresshelper.h  decompress.cpp  decompress.h  difference.cpp  difference.h  downsampling.cpp  downsampling.h  dtsforpcs.cpp  dtsforpcs.h  filescontext.cpp  filescontext.h  helper.cpp  helper.h  k-wave-h5-processing.pro  main.cpp  paramsdefinition.cpp  paramsdefinition.h  processing.cpp  processing.h  reshape.cpp  reshape.h  settings.cpp  settings.h
projects/k-wave-h5-processing-parallel/: k-wave-h5-processing-parallel.cpp
projects/k-wave-h5-processing/processing/: changechunks.cpp  changechunks.h  compress.cpp  compress.h  compresshelper.cpp  compresshelper.h  (+10 more)
projects/k-wave-h5-visualizer/: CMakeLists.txt  abstractfilewidget.cpp  abstractfilewidget.h  abstractobjectwidget.cpp  abstractobjectwidget.h  abstractwidget.cpp  abstractwidget.h  colormap.cpp  colormap.h  datasetinfogroupbox.cpp  datasetinfogroupbox.h  datasetinfogroupbox.ui  datasetsdockwidget.cpp  datasetsdockwidget.h  datasetsdockwidget.ui  fileinfodockwidget.cpp  fileinfodockwidget.h  fileinfodockwidget.ui  groupboxopacity.cpp  groupboxopacity.h  groupboxopacity.ui  gwindow.cpp  gwindow.h  h5objecttovisualize.cpp  h5objecttovisualize.h  h5openedfile.cpp  h5openedfile.h  h5readingthread.cpp  h5readingthread.h  h5subobjecttovisualize.cpp  h5subobjecttovisualize.h  hdf5readingthread.cpp  hdf5readingthread.h  imagedockwidget.cpp  imagedockwidget.h  imagedockwidget.ui  imagewidget.cpp  imagewidget.h  k-wave-h5-visualizer.pro  main.cpp  (+21 more)
projects/rewrite-ram/: rewrite-ram.cpp  rewrite-ram.pro
projects/src/: CMakeLists.txt  detect_arch_and_build_mode.pri  hdf5-parallel.pri  hdf5-parallel_paths_default.pri  hdf5.pri  hdf5_paths_default.pri  opencv.pri  opencv_paths_default.pri  projects.pro
projects/tests/: tests.pro
src/hdf5helper/: CMakeLists.txt  HDF5Attribute.cpp  HDF5Attribute.h  HDF5Dataset.cpp  HDF5Dataset.h  HDF5File.cpp  HDF5File.h  HDF5Group.cpp  HDF5Group.h  HDF5Object.cpp  HDF5Object.h  HDF5Vector.cpp  HDF5Vector.h  HDF5Vector3D.cpp  HDF5Vector3D.h  HDF5Vector4D.cpp  hdf5helper.h  hdf5helper.pro
(+788 files in other folders)
